--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_API_URL=https://api-auth.faishion.ai/v1
+#VITE_API_URL=https://api-auth.faishion.ai/v1
 
 
 
-# VITE_API_URL=http://localhost:3000/v1
+VITE_API_URL=http://localhost:3000/v1
