--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^5.25.1",
     "axios": "^1.8.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.523.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
