--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/icons": "^6.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.4",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@react-oauth/google": "^0.12.1",
